<resources>
    <string name="app_name">Cukcuk Lite</string>
    <string name="sale_off_status">Ngừng bán</string>
    <string name="add_new_menu">Add New</string>
    <string name="price_text">Giá tiền:</string>
    <string name="menu_list_title">Thực đơn</string>
    <string name="add_edit_add_new_text">Thêm mới</string>
    <string name="add_edit_edit_product_text">Chỉnh sửa</string>
    <string name="action_save">Cất</string>
    <string name="delete_button_text">Xóa</string>
    <string name="name_product_hint">Tên món</string>
    <string name="star_red">*</string>
    <string name="name_product_hint_edittext">Nhập tên món</string>
    <string name="price_product_label">Giá bán</string>
    <string name="product_unit_label">Đơn vị tính</string>
    <string name="product_color_label">Màu sắc</string>
    <string name="product_thumbnail_label">Biểu tượng</string>
    <string name="add_new_unit_hint">Thêm đơn vị tính</string>
    <string name="add_edit_message_success">Thêm mới thành công</string>
    <string name="add_edit_message_error">Thao tác thất bại</string>
    <string name="delete_success_message">Xóa sản phẩm thành công</string>
    <string name="delete_error_message">Xóa sản phẩm thất bại</string>
    <string name="loading_message">Loading..</string>
    <string name="cancel">Huỷ bỏ</string>
    <string name="price_sale">Giá bán</string>
    <string name="zero">0</string>
    <string name="update_success_message">Cập nhật thành công</string>
    <string name="update_error_message">Cập nhật thất bại</string>
    <string name="done">xong</string>
    <string name="unit_title_name">Đơn vị tính</string>
    <string name="add_new_unit_success_message">Thêm mới thành công</string>
    <string name="add_new_unit_error_message">Thêm mới thất bại</string>
    <string name="edittext_add_unit_hint">Nhập đơn vị tính</string>
    <string name="add_unit_title">Thêm đơn vị tính</string>
    <string name="edit_unit_title">Sửa đơn vị tính</string>
    <string name="action_yes_name">có</string>
    <string name="action_no_name">không</string>
    <string name="error_money">Giá tiền phải lớn hơn 0</string>
    <string name="product_status_sale_off">Ngừng bán</string>
    <string name="empty_state_product">Chưa có thực đơn</string>
    <string name="error_name_product_empty">Tên sản phẩm không thể bỏ trống</string>
    <string name="question_ask_delete_product">Bạn có chắc chắn muốn xóa món <![CDATA[<b>%s</b>]]> không?</string>
    <string name="question_ask_delete_unit">Bạn có chắc chắn muốn xóa đơn vị tính <![CDATA[<b>%s</b>]]> không?</string>

    <string name="remove_product_menu_text">Xóa khỏi danh sách</string>
    <string name="error_message_unit_name_exist">Tên đơn vị tính đã tồn tại</string>
    <string name="error_name_product_is_exist">Tên sản phẩm đã tồn tại</string>
    <string name="sale_menu_action">Bán hàng</string>
    <string name="menu_action_menu">Thực đơn</string>
    <string name="report_menu_action">Báo cáo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_btn_name">Đăng nhập</string>
    <string name="signup_btn_name">Đăng ký</string>
    <string name="nav_settting_title">Thiết lập</string>
    <string name="nav_sync_title">Đồng bộ dữ liệu</string>
    <string name="nav_notification_title">Thông báo</string>
    <string name="nav_share_title">Giới thiệu cho bạn</string>
    <string name="nav_rate_title">Đánh giá ứng dụng</string>
    <string name="nav_info_title">Thông tin sản phẩm</string>
    <string name="submenu_title_help">Trợ giúp</string>
    <string name="submenu_title_setttings">Thiết lập</string>
    <string name="status_product">Trạng thái</string>
</resources>
