<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".unitlist.UnitListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/ivBackButton"
            android:layout_width="@dimen/circle_size"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/margin_padding_haft"
            app:srcCompat="@drawable/ic_arrow_back_white_24dp" />

        <TextView
            android:id="@+id/tvAddEditTitle"
            style="@style/FontHeaderTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unit_title_name"
            android:textAlignment="center"
            android:textColor="@color/colorWhite" />

        <ImageView
            android:id="@+id/ivAddButtonUnit"
            android:layout_width="@dimen/circle_size"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/margin_padding_haft"
            app:srcCompat="@drawable/ic_add_white_24dp" />


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcvUnitList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/actionBarSize"
        android:layout_marginTop="?attr/actionBarSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDoneUnit"
            style="@style/FontButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_haft"
            android:background="@drawable/bg_primary_button"
            android:text="@string/done"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</RelativeLayout>